--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,14 @@
         --yellow-dark: hsl(39, 100%, 71%);
         --white: hsl(0, 0%, 100%);
         --off-white: hsl(0, 0%, 96%);
+        --gray:#F5F5F5;
         --black: hsl(0, 0%, 7%);
+        
 
         --font-size-reg: 1.125rem;
+        --font-size-s: 1.5rem;
         --font-size-m: 2.25rem;
+        --font-size-m-l: 2.85rem;
         --font-size-l: 3rem;
         --font-size-xl: 4rem;
     }
@@ -34,7 +38,7 @@
     margin: 32px;
     color: var(--black);
     font-size: var(--font-size-reg);
-    background: var(--off-white);
+    background: var(--gray);
 
     display: grid;
     gap: 30px; /* Space between grid items */
@@ -59,33 +63,61 @@
 
     #div_1 { 
         background-color: hsl(256, 67%, 59%);
+        padding: 43px;
         color: var(--white);
         text-align: center; 
         justify-content: center; 
+        line-height: 2.5rem;
     }
 
     h1 {
-        padding: 32px;
-        margin: 0;
+        margin: 0 0 30px 0;
         font-weight: 500;
+        font-size: var(--font-size-m-l);
     }
 
     h2 {
-        padding: 32px;
-        margin: 0;
-        font-weight: 500;
+        font-size: var(--font-size-s);
+        padding: 0px;
+        margin: 0 20px 13px 13px;
+        font-weight: 600;
+        line-height: 1.5rem;
     }
 
     img {
-        max-width: 100%;
-        display: block;
+        max-width: 80%;
+        
+    }
+
+    span{
+        color: var(--yellow-dark);
+    }
+
+    p{
+        margin-top:0;
+        margin-bottom: 0;
+    }
+
+    #div_2_p{
+        
+        padding-left: 10px;
+        padding-right: 10px;
+        margin:6px;
+        font-size: var(--font-size-s);
+        font-weight: 600;
     }
 
     #div_2 { 
-        background-color: white;
+        
+        text-align: left;
+        padding: top 10px;;
+        background-color: var(--white);
+        
     }
 
     #div_3 { 
+        padding: 20px 20px 0 20px;
+        align-items:flex-start;
         background-color: hsl(39, 100%, 71%);
     }
 
