--- a/css/styles.css
+++ b/css/styles.css
@@ -30,15 +30,23 @@
         --font-size-l: 3rem;
         --font-size-xl: 4rem;
     }
+html{
+     background-color: var(--gray);
+}
+
+body {
+    background-color: var(--gray);
+    margin: 0;
+}
 
 .container {
     font-family: "DMSans", sans-serif;
     line-height: 1.5;
 
-    margin: 32px;
+    margin: 30px 15px 30px 15px;
     color: var(--black);
     font-size: var(--font-size-reg);
-    background: var(--gray);
+    background-color: var(--gray);
 
     display: grid;
     gap: 30px; /* Space between grid items */
@@ -63,30 +71,32 @@
 
     #div_1 { 
         background-color: hsl(256, 67%, 59%);
-        padding: 43px;
+        padding: 45px;
         color: var(--white);
         text-align: center; 
         justify-content: center; 
         line-height: 2.5rem;
+         :nth-child(2) {
+            max-width: 70%;
+         }
+         
     }
 
     h1 {
         margin: 0 0 30px 0;
         font-weight: 500;
-        font-size: var(--font-size-m-l);
+        font-size: var(--font-size-l);
     }
 
     h2 {
         font-size: var(--font-size-s);
         padding: 0px;
-        margin: 0 20px 13px 13px;
         font-weight: 600;
         line-height: 1.5rem;
     }
 
     img {
-        max-width: 80%;
-        
+        max-width: 100%;
     }
 
     span{
@@ -99,7 +109,6 @@
     }
 
     #div_2_p{
-        
         padding-left: 10px;
         padding-right: 10px;
         margin:6px;
@@ -108,25 +117,46 @@
     }
 
     #div_2 { 
-        
         text-align: left;
         padding: top 10px;;
         background-color: var(--white);
-        
     }
 
     #div_3 { 
-        padding: 20px 20px 0 20px;
+        padding: 0px 20px 0 20px;
         align-items:flex-start;
-        background-color: hsl(39, 100%, 71%);
+        background-color: hsl(39, 100%, 71%);  
     }
+
+    #div_3 > :first-child{
+            max-width: 80%;
+        }
+    
+    #div_3 > :nth-child(2) {
+            max-width: 70%;
+            overflow: hidden;
+         }
+    
+
 
     #div_4 {
         background-color: hsl(254, 88%, 90%);
+        padding-top: 10px;
+        align-items: center;
     }
+
+    #div_4 > :last-child {
+            text-align: center;
+            font-size: var(--font-size-reg);
+            font-weight: 500;
+            padding: 26px 26px 10px 26px;
+        }
 
     #div_5 { 
         background-color: hsl(256, 67%, 59%);
+        color: var(--white);
+        text-align: center;
+        line-height: 2.5rem;
     }
 
     #div_6 { 
