--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,7 @@
         --off-white: hsl(0, 0%, 96%);
         --gray:#F5F5F5;
         --black: hsl(0, 0%, 7%);
-        
-
+    
         --font-size-reg: 1.125rem;
         --font-size-s: 1.5rem;
         --font-size-m: 2.25rem;
@@ -41,31 +40,44 @@ body {
 
 .container {
     font-family: "DMSans", sans-serif;
-    line-height: 1.5;
-
     margin: 30px 15px 30px 15px;
-    color: var(--black);
-    font-size: var(--font-size-reg);
+    max-inline-size: 1000px;
     background-color: var(--gray);
-
     display: grid;
-    gap: 30px; /* Space between grid items */
-    min-height: 100vh; /* Ensure body takes full viewport height */
-    align-content:center; /* Align grid content to the top */
-    justify-content: center; /* Center the grid horizontally if there's extra space */
-    box-sizing: border-box; /* Include padding in element's total width/height */
-    background-color: #f0eff4;        
+    gap: 30px;
+    grid-template-areas: 
+    'one'
+    'two'
+    'three'
+    'four'
+    'five'
+    'six'
+    'seven'
+    'eight';
+
+    min-height: 100vh; 
+    justify-content: center;
+    box-sizing: border-box;    
     }
+
+    @media (width > 960px) {
+        .container {
+            grid-template-areas: 
+            "seven one one four"
+            "seven two three four"
+            "eight two three four"
+            "eight six five five";
+
+        }
+        }
 
         .container > div {
         padding: 25px; 
         display: flex;
         flex-direction: column;
-        justify-content: center; /* Center content vertically */
-        align-items:center; /* Align content to the start (left) by default */
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow */
-        overflow: hidden; /* Hide overflowing content if any */
-        color: #333; /* Default text color */
+        align-items:center;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        overflow: hidden; 
         border-radius: 12px;
         }
 
@@ -73,14 +85,13 @@ body {
         background-color: hsl(256, 67%, 59%);
         padding: 45px;
         color: var(--white);
-        text-align: center; 
-        justify-content: center; 
-        line-height: 2.5rem;
-         :nth-child(2) {
-            max-width: 70%;
-         }
-         
+        text-align: center;
+        line-height: 2.5rem; 
+        grid-area: one;
     }
+        #div_1 > :nth-child(2) {
+            max-width: 70%;
+         } 
 
     h1 {
         margin: 0 0 30px 0;
@@ -97,7 +108,6 @@ body {
 
     img {
         max-width: 100%;
-        background-color: transparent;
     }
 
     span{
@@ -121,32 +131,37 @@ body {
         text-align: left;
         padding: top 10px;
         background-color: var(--white);
+        grid-area: two;
     }
+
+        #div_2 > :first-child{
+            filter: drop-shadow(0 0 1rem hsl(0 0% 0% / .25));
+            border-radius: 100vm;
+        }
 
     #div_3 { 
         padding: 0px 20px 0 20px;
         align-items:flex-start;
         background-color: hsl(39, 100%, 71%);  
+        grid-area: three;
     }
-
-    #div_3 > :first-child{
+        #div_3 > :first-child{
             max-width: 80%;
         }
     
-    #div_3 > :nth-child(2) {
+        #div_3 > :last-child {
             max-width: 70%;
+            margin-bottom: -20px;
             overflow: hidden;
          }
     
-
-
     #div_4 {
         background-color: hsl(254, 88%, 90%);
         padding-top: 10px;
         align-items: center;
+        grid-area: four;
     }
-
-    #div_4 > :last-child {
+        #div_4 > :last-child {
             text-align: center;
             font-size: var(--font-size-reg);
             font-weight: 500;
@@ -157,76 +172,75 @@ body {
         background-color: hsl(256, 67%, 59%);
         color: var(--white);
         text-align: center;
+        grid-area: five;
     }
-
-    #div_5 > :first-child {
+        #div_5 > :first-child {
         max-width: 80%;
-    }
+        }
 
-    #div_5 > :last-child {
+        #div_5 > :last-child {
         font-size: var(--font-size-m);
         line-height: 2.3rem;
         font-weight: 500;
         margin: 30px 30px 0px 30px;
-    }
+        }
 
     #div_6 { 
         background-color: white;
         align-items: flex-start;
+        grid-area: six;
     }
-
-    #div_6 > :first-child {
+        #div_6 > :first-child {
         font-size: var(--font-size-xl);
         margin-bottom: 0px;
-    }
+        }
 
-     #div_6 > :nth-child(2) {
+        #div_6 > :nth-child(2) {
         margin-top: 0px;
-    }
+        }
 
-    #div_6 > :last-child {
+        #div_6 > :last-child {
         max-width: 75%;
-    }
+        }
 
 
     #div_7 { 
         background-color: hsl(31, 66%, 93%);
         padding:30px;
-        align-items: flex-start;
-        
+        align-items: flex-start; 
+        grid-area: seven;
     }
-
-    #div_7 > :first-child {
+        #div_7 > :first-child {
         font-size: 2.2rem;
         font-weight: 600;
         line-height: 2.1rem;
         margin-top: 0px;
-    }
+        }
 
-    #span_2 {
+        #span_2 {
         color: var(--purple-dark);
-    }
+        }
 
-    #div_7 > :last-child {
+        #div_7 > :last-child {
         max-width: 65%;
-    }
+        }
 
     #div_8 {
         font-size: var(--font-size-m);
         background-color: hsl(39, 100%, 71%);
         align-items: flex-start;
+        grid-area: eight;
     }
-
-    #div_8 > :first-child {
+        #div_8 > :first-child {
         font-size: 2.2rem;
         font-weight: 600;
         line-height: 2.1rem;
         margin-top: 0px;
-    }
+        }
 
-    #div_8 > :last-child {
+        #div_8 > :last-child {
         max-width: 80%;
-    }
+        }
 
     .attribution {
         font-family: "DMSans";
@@ -236,8 +250,11 @@ body {
         text-decoration: none;
     }
 
-     .attribution > a {
+        .attribution > a {
         text-decoration: none;
         color:var(--purple-dark);
         font-weight: 600;
-     }
+        }
+
+
+
